--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -30,7 +30,7 @@
       <div class="row">
         <div class="col-md-12">
           <h4>Latest Mars News</h4>
-          <h4 class="heading">{{news_title}}</h4>
+          <h4 class="heading">{{mars_data.news_title}}</h4>
         </div>
       </div>
     </div>
@@ -44,13 +44,13 @@
       <div class="row">
         <div class="col-md-7">
           <h2>Featured Mars Image</h2>
-          <h4 class="heading">{{image}}</h4>
+          <h4 class="heading">{{mars_data.featured_image_url}}</h4>
         </div>
 
         <!---Mars facts--------------------------------->
         <div class="col-md-5">
           <h2>Mars Facts</h2>
-          <h4 class="heading">{{tables[1]}}</h4>
+          <h4 class="heading">{{mars_data.table_df}}</h4>
         </div>
       </div>
     </div>
@@ -68,13 +68,13 @@
 
       <div class="row">
         <div class="col-md-6">
-          <h4 class="heading">{{pic_href[0]}}</h4>
+          <h4 class="heading">{{mars_data.pic_href}}</h4>
         </div>
 
         <!----Mars Hemisphere 2--------------------------------->
 
         <div class="col-md-6">
-          <h4 class="heading">{{pic_href[1]}}</h4>
+          <h4 class="heading">{{mars_data.pic_href[1]}}</h4>
         </div>
       </div>
     </div>
@@ -84,13 +84,13 @@
 
       <div class="row">
         <div class="col-md-6">
-          <h4 class="heading">{{pic_href[2]}}</h4>
+          <h4 class="heading">{{mars_data.pic_href[2]}}</h4>
         </div>
 
         <!----Mars Hemisphere 4--------------------------------->
 
         <div class="col-md-6">
-          <h4 class="heading">{{pic_href[3]}}</h4>
+          <h4 class="heading">{{mars_data.pic_href[3]}}</h4>
         </div>
       </div>
     </div>
