--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="col-md-7">
           <h2>Featured Mars Image</h2>
-          <h4 class="heading">{{mars_data.featured_image_url}}</h4>
+          <h4 class="heading">{{mars_data.featured_image}}</h4>
         </div>
 
         <!---Mars facts--------------------------------->
@@ -68,7 +68,7 @@
 
       <div class="row">
         <div class="col-md-6">
-          <h4 class="heading">{{mars_data.pic_href}}</h4>
+          <h4 class="heading">{{mars_data.pic_href[0]}}</h4>
         </div>
 
         <!----Mars Hemisphere 2--------------------------------->
