--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -29,8 +29,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h4>Latest Mars News</h4>
-          <h4 class="heading">{{mars_data.news_title}}</h4>
+          <h2>Latest Mars News</h2>
+          <h4 class="heading"><strong>{{mars_data.news_title}}</strong></h4>
+
+          <h4>{{mars_data.news_p}}</h4>
         </div>
       </div>
     </div>
@@ -51,7 +53,8 @@
         <!---Mars facts--------------------------------->
         <div class="col-md-5">
           <h2>Mars Facts</h2>
-          <h4 class="heading">{{mars_data.table}}</h4>
+          <!-- <h4 class="heading">{{mars_data.table}}</h4> -->
+          <h4 class="heading">{{mars_data.table | safe}}</h4>
         </div>
       </div>
     </div>
