--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -22,7 +22,7 @@
         </p>
       </div>
     </div>
-
+    {%if mars_data %}
     <!--------------------------------------------------------------------------------------------------------------->
     <!---Latest Mars News-->
 
@@ -72,7 +72,6 @@
 
       <div class="row">
         <div class="col-md-6">
-          <!-- <h4 class="heading">{{mars_data.pic_href[0]}}</h4> -->
           <h3>Cerberus Hemisphere</h3>
           <img src="{{ mars_data.pic_href[0]}}" width="500" height="600" />
         </div>
@@ -106,5 +105,6 @@
         </div>
       </div>
     </div>
+    {%endif %}
   </body>
 </html>
